--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
         try {
           const data = await fetch("/update");
           const json = await data.json();
-          console.log(json.error || json.text);
+          console.log(json);
         } catch (error) {
           console.log(error.message);
         }
