--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
       const updateFirestore = async () => {
         try {
           const data = await fetch("/update");
-          const json = await data.json();
+          const json = data.json();
           console.log(json);
         } catch (error) {
           console.log(error.message);
