--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hitung Mundur 24 Jam</title>
-    <!-- bootstrap css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 100px;
-      }
 
-      #countdown {
-        font-size: 48px;
-      }
-    </style>
-  </head>
-  <head> </head>
-  <body>
-    <h1>Data Firestore Akan Segera Update</h1>
-    <div id="countdown"></div>
-    <button id="btn-update" class="mt-4 btn btn-primary">
-      Update Sekarang
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hitung Mundur 24 Jam</title>
+  <!-- bootstrap css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 100px;
+    }
+
+    #countdown {
+      font-size: 48px;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  </style>
+</head>
+
+<head> </head>
+
+<body>
+  <h1>Data Firestore Akan Segera Update</h1>
+  <div id="countdown"></div>
+  <div class="container">
+    <button id="btn-update-pulsa" class="mt-4 btn btn-primary" onclick="fetchData('pulsa')">
+      Update Pulsa Sekarang
     </button>
+    <button id="btn-update-paket-internet" class="mt-4 btn btn-primary" onclick="fetchData('paket-internet')">
+      Update Paket Internet Sekarang
+    </button>
+    <button id="btn-update-voucher-internet" class="mt-4 btn btn-primary" onclick="fetchData('voucher-internet')">
+      Update Voucher Sekarang
+    </button>
+  </div>
 
-    <!-- bootstrap js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- bootstrap js -->
+  <script>
+    const textBtn = {
+      pulsa: document.getElementById('btn-update-pulsa'),
+      'paket-internet': document.getElementById('btn-update-paket-internet'),
+      'voucher-internet': document.getElementById('btn-update-voucher-internet')
+    }
+
+    const fetchData = async (product) => {
+      try {
+
+        textBtn[product].innerHTML = 'Loading...'
+        textBtn[product].classList.remove('btn-primary')
+        textBtn[product].classList.add('btn-light')
+        await fetch(`/scrape-and-update/${product}`)
+        textBtn[product].classList.remove('btn-light')
+        textBtn[product].classList.add('btn-success')
+        textBtn[product].innerHTML = `Update data ${product} suksesss`
+        setTimeout(() => {
+          textBtn[product].classList.remove('btn-success')
+          textBtn[product].classList.add('btn-primary')
+          textBtn[product].innerHTML = `Update data ${product} sekarang`
+        }, 1000);
+      } catch (error) {
+        textBtn[product].innerHTML = 'terjadi errror'
+        console.log(error.message)
+      }
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+    integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
